modified RuntimeDemo.java and JvmNote.txt